An Experimental Study of Kubernetes Cluster Peer-to-Peer Application-Level Federation via Istio Service Mesh/resources/ingress-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-multicluster-ingressgateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: tls
      number: 15443
      protocol: TLS
    tls:
      mode: AUTO_PASSTHROUGH
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
