An Experimental Study of Kubernetes Cluster Peer-to-Peer Application-Level Federation via Istio Service Mesh/resources/echo-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo
spec:
  hosts:
  - "*"
  gateways:
  - istio-multicluster-ingressgateway.istio.svc.cluster.local
  http:
    - route:
      - destination:
          host: echo.istio.svc.cluster.local
          port:
            number: 80
